--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://stupistic.github.io/leadzen",
+  "homepage": "https://stupistic.github.io/Leadzen",
   "name": "leadzen",
   "version": "0.1.0",
   "private": false,
